--- a/client/src/app/components/sections/common/navbar/user-navbar/user-profil-modal/user-profil-modal.component.html
+++ b/client/src/app/components/sections/common/navbar/user-navbar/user-profil-modal/user-profil-modal.component.html
@@ -8,11 +8,21 @@
         <div class="modal-body justify-content-start">
           <div class="d-flex align-items-start justify-content-start">
             <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-              <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#logout" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false" (click)="setTittle('sesionInformationTitle')">{{ translationService.translate('sesion') }}</button>
+              <button 
+                  class="nav-link" 
+                  id="v-pills-settings-tab" 
+                  data-bs-toggle="pill" 
+                  data-bs-target="#logout" 
+                  type="button" 
+                  role="tab" 
+                  aria-controls="v-pills-settings" 
+                  aria-selected="false" 
+                  (click)="setTittle('sessionInformation')">{{ translationService.translate('session') }}
+                </button>
             </div>
             <div class="tab-content" id="v-pills-tabContent">
               <div class="tab-pane fade" id="logout" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">
-                {{ translationService.translate('sesionExpirationIn') }} : <b>{{ authService.getExpirationTimeRemaining() }}</b>
+                {{ translationService.translate('sessionExpirationIn') }} : <b>{{ authService.getExpirationTimeRemaining() }}</b>
                 <button class="btn btn-primary" (click)="logOut()">{{ translationService.translate('logOut') }}</button>
               </div>
             </div>
