--- a/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.html
+++ b/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.html
@@ -4,15 +4,15 @@
   </div>
   
   <div class="list" *ngIf="canListPublishers">
-    <div class="listElemnts" *ngFor="let publisher of publishers">
-        <div *ngIf="publisher.canShowPublisher" class="row list-elment">
+    <div class="listElements" *ngFor="let publisher of publishers">
+        <div *ngIf="publisher.canShowPublisher" class="row list-element">
           <div class="col-1">
             <img src="../../../../../../assets/media/logo/ea.png" class="logo">
           </div>
-          <div class="col-8 list-elment-name">
+          <div class="col-8 list-element-name">
             <a [routerLink]="['/publisher/show/', publisher.id]">{{ publisher.generalInformation.name }}</a>
           </div>
-          <div class="col-3 list-elment-icons">
+          <div class="col-3 list-element-icons">
             <a [routerLink]="['/publisher/show/', publisher.id]"><i class="fa-solid fa-circle-info action-icon"></i></a>
             <a [routerLink]="['/publisher/edit/', publisher.id]"><i *ngIf="publisher.canEditPublisher" class="fa-solid fa-pen-to-square action-icon"></i></a>
             <a [routerLink]="['/publisher/delete/', publisher.id]"><i *ngIf="publisher.canDeletePublisher" class="fa-solid fa-trash action-icon"></i></a>
