--- a/client/src/app/components/sections/publishers/show-publisher/show-publisher-genral-information/show-publisher-general-information.component.html
+++ b/client/src/app/components/sections/publishers/show-publisher/show-publisher-genral-information/show-publisher-general-information.component.html
@@ -1,5 +1,7 @@
 <div class="card">
-
+    <span *ngIf="edit" class="edit">
+        <i class="fa-solid fa-pen-to-square" data-bs-toggle="modal" data-bs-target="#editGeneralInformation"></i>
+    </span>
     <div class="card-body">
 
         <h2>{{ translationService.translate('generalInformation') }}</h2>
@@ -38,3 +40,5 @@
     </div>
 
 </div>
+
+<edit-publisher-general-information [publisher]="publisher" *ngIf="edit"></edit-publisher-general-information>
