--- a/client/src/app/components/sections/publishers/show-publisher/show-publisher.component.html
+++ b/client/src/app/components/sections/publishers/show-publisher/show-publisher.component.html
@@ -1,8 +1,7 @@
 <div *ngIf="showPublisherGeneralInformation()">
     <div class="row">
         <div *ngIf="checkIfGranted('CAN_SHOW_PUBLISHER_GENERAL_INFORMATION')" class="item-card col-4">
-            <a href="fqef"><i class="fa-solid fa-pen-to-square edit"></i></a>
-            <show-publisher-general-information [publisher]="publisher" ></show-publisher-general-information>
+            <show-publisher-general-information [publisher]="publisher" [edit]="checkIfGranted('CAN_SHOW_PUBLISHER_GENERAL_INFORMATION')" ></show-publisher-general-information>
         </div>
     </div>
 </div>
