--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -13,5 +13,5 @@ $border-color : rgb(62, 123, 245);
 @import "scss/forms";
 @import "scss/cards";
 @import "scss/main";
-
+@import "scss/botstrap"
 
