--- a/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-general-information/edit-publisher-general-information.component.html
+++ b/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-general-information/edit-publisher-general-information.component.html
@@ -26,12 +26,13 @@
                             name="scraper"     
                             required
                           >
+                          <div id="generalInformationscraperFeedback" formFeedback="url" class="invalid-feedback mt-3"></div>
                         </div>
                         <div class="col-2">
                           <button type="button" (click)="getDataFromScraper()" class="btn btn-primary"><i class="fa-solid fa-arrow-down"></i></button>
                         </div>
                       </div>
-                      <div id="generalInformationscraperFeedback" formFeedback="generalInformationscraper" class="invalid-feedback mt-3"></div>
+                      
                     </div>
                 </div>
               </div>
