--- a/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
+++ b/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
@@ -8,7 +8,73 @@
           </div>
 
           <div class="modal-body">
-           
+
+            <div class="row mb-3">
+              <div class="row">
+                  <div class="col-2">
+                    <label for="pl">English</label>
+                  </div>
+                  <div class="col-10">
+                    <textarea
+                      formId = 'eng' 
+                      form="descriptions" 
+                      type="text" 
+                      class="form-control" 
+                      id="eng" 
+                      [(ngModel)]="eng"  
+                      name="eng"     
+                      required
+                      >
+                    </textarea>
+                    <div id="descriptionsengFeedback" formFeedback="eng" class="invalid-feedback mt-3"></div>
+                  </div>
+              </div>
+            </div>
+            
+            <div class="row mb-3">
+              <div class="row">
+                  <div class="col-2">
+                    <label for="pl">Polski</label>
+                  </div>
+                  <div class="col-10">
+                    <textarea
+                      formId = 'pl' 
+                      form="descriptions" 
+                      type="text" 
+                      class="form-control" 
+                      id="pl" 
+                      [(ngModel)]="pl"  
+                      name="pl"     
+                      required
+                      >
+                    </textarea>
+                    <div id="descriptionsplFeedback" formFeedback="pl" class="invalid-feedback mt-3"></div>
+                  </div>
+              </div>
+            </div>
+            
+            <div class="row mb-3">
+              <div class="row">
+                  <div class="col-2">
+                    <label for="r">French</label>
+                  </div>
+                  <div class="col-10">
+                    <textarea
+                      formId = 'fr' 
+                      form="descriptions" 
+                      type="text" 
+                      class="form-control" 
+                      id="fr" 
+                      [(ngModel)]="fr"  
+                      name="fr"     
+                      required
+                      >
+                    </textarea>
+                    <div id="descriptionsfrFeedback" formFeedback="fr" class="invalid-feedback mt-3"></div>
+                  </div>
+              </div>
+            </div> 
+
           </div>
 
           <div class="modal-footer">
